########### install files ###############

install(FILES lurchie.png DESTINATION ${KDE_INSTALL_DATADIR}/kraft/reports/images)
install(FILES postit.png kraft_customer.png DESTINATION ${KDE_INSTALL_DATADIR}/kraft/reports/images/docdigestdetailview)
install(FILES identity.png DESTINATION ${KDE_INSTALL_DATADIR}/kraft/reports/images)
